--- a/dom/index.html
+++ b/dom/index.html
@@ -615,14 +615,14 @@
                         <div class="contacts__card">
                             <h4 class="contacts__card-title">Контакты Челябинск:</h4>
                             <p class="contacts__card-address">454138, Челябинск, проспект Победы, д.290, офис 516</p>
-                            <button class="button button_contacts">Посмотреть на карте</button>
+                            <a href="https://yandex.ru/maps/-/CCQxuOH1KA" target="_blank" class="button button_contacts">Посмотреть на карте</a>
                             <a href="tel:+79226334166" class="contacts__card-tel">+7 (922) 633-41-66</a>
                             <a href="tel:+73517111501" class="contacts__card-tel">+7 (351) 711-15-01</a>
                         </div>
                         <div class="contacts__card">
                             <h4 class="contacts__card-title">Контакты уфа:</h4>
                             <p class="contacts__card-address">450078, г. Уфа, ул. Сагита Агиша, 2Б, оф. 10</p>
-                            <button class="button button_contacts">Посмотреть на карте</button>
+                            <a href="https://yandex.ru/maps/-/CCQxuOTbkD" target="_blank" class="button button_contacts">Посмотреть на карте</a>
                             <a href="tel:+73472629242" class="contacts__card-tel">+7 (347) 262-92-42</a>
                             <a href="tel:+79378499242" class="contacts__card-tel">+7 (937) 849-92-42</a>
                         </div>
@@ -637,7 +637,8 @@
             </div>
         </section>
         <section class="map">
-            <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A17e0a35376584c534891e4a86ad56c338e7c39cdb86ee02730978682c06889e0&amp;source=constructor" width="100%" height="400" frameborder="0"></iframe>
+            <!-- <img src="./img/map.jpg" alt="Карта" class="map__img"> -->
+            <!-- <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A17e0a35376584c534891e4a86ad56c338e7c39cdb86ee02730978682c06889e0&amp;source=constructor" width="100%" height="400" frameborder="0"></iframe> -->
         </section>
     </main>
     <footer class="footer">
