--- a/dentko/doctor.html
+++ b/dentko/doctor.html
@@ -137,18 +137,20 @@
             <div class="uk-container">
                 <div class="uk-section">
                     <div class="uk-flex uk-flex-between about__container">
-                        <div class="about__sticky">
-                            <div class="about__img-wrap">
-                                <div class="uk-position-relative about__img-bg">
-                                    <img class="about__img about__img_pa" src="./img/doctor.png" uk-img>
+                        <div class="about__side-stiky">
+                            <div class="about__sticky">
+                                <div class="about__img-wrap">
+                                    <div class="uk-position-relative about__img-bg">
+                                        <img class="about__img about__img_pa" src="./img/doctor.png" uk-img>
+                                    </div>
+                                </div>
+                                <div class="uk-flex uk-flex-between uk-margin-medium-top about__buttons">
+                                    <button class="uk-button uk-button-default button">Записаться на прием<img src="./img/inline-arrow-w.svg"></button>
+                                    <button class="uk-button uk-button-default button button_transparent">Консультация стоматолога</button>
                                 </div>
                             </div>
-                            <div class="uk-flex uk-flex-between uk-margin-medium-top about__buttons">
-                                <button class="uk-button uk-button-default button">Записаться на прием<img src="./img/inline-arrow-w.svg"></button>
-                                <button class="uk-button uk-button-default button button_transparent">Консультация стоматолога</button>
-                            </div>
                         </div>
-                        <div class="about__side">
+                        <div class="about__side-stiky">
                             <h2 class="uk-h1">Профессиональные умения и навыки</h2>
                             <ul class="uk-list">
                                 <li class="uk-text uk-text-bold">Высокий профессиональный уровень в области терапевтической  стоматологии.</li>
