--- a/dentko/index.html
+++ b/dentko/index.html
@@ -475,14 +475,14 @@
                     <p class="uk-text-meta">Запишитесь на прием к специалисту для первичной диагностики.</p>
                     <form class="uk-flex uk-flex-middle">
                         <div class="uk-input form__div">
-                            <input class="uk-input" type="text" placeholder="Ваше имя">
+                            <input class="uk-input" type="text" name="name" placeholder="Ваше имя" required>
                             <span class="form__err">В формате А-Я,а-я и минимум 2 символа</span>
                         </div>
                         <div class="uk-input form__div">
-                            <input class="uk-input" type="tel" placeholder="Ваш телефон">
+                            <input class="uk-input" type="tel" name="tel" placeholder="Ваш телефон" required>
                             <span class="form__err">Введите номер в международном формате</span>
                         </div>
-                        <button class="uk-input popup-sucsess-open" type="submit">Записаться на прием</button>
+                        <button class="uk-input" type="submit">Записаться на прием</button>
                         <div class="uk-position-relative form__dropdown-wrap">
                             <span class="form__schedule">Посмотреть режим работы  <img src="./img/info-w.svg"></span>
                             <div class="uk-position-absolute uk-card uk-card-body uk-margin-remove-top form__dropdown-card">
