--- a/dentko/contacts.html
+++ b/dentko/contacts.html
@@ -95,9 +95,9 @@
                 </li>
                 <li><a href="./price.html">цены</a></li>
                 <li><a href="./payment.html">оплата и рассрочка</a></li>
-                <li><a href="./reviews.html">отзывы</a></li>
+                <li><a href="./reviews/reviews.html">отзывы</a></li>
                 <li><a href="./team.html">специалисты</a></li>
-                <li><a href="./faq.html">вопрос-ответ</a></li>
+                <li><a href="./faq/faq.html">вопрос-ответ</a></li>
                 <li><a href="./contacts.html">контакты</a></li>
                 <li><a class="nav__order popup-request-open" href="#">Записаться на прием <img src="./img/inline-arrow.svg"></a></li>
             </ul>
@@ -105,6 +105,14 @@
     </nav>
     <div class="mobile-menu"></div>
     <main class="main">
+        <section class="beradcrumbs">
+            <div class="uk-container">
+                <ul class="beradcrumbs__list">
+                    <li class="beradcrumbs__item"><a href="./index.html" class="beradcrumbs__link">Главная</a></li>
+                    <li class="beradcrumbs__item"><a href="#" class="beradcrumbs__link reviews__control_disabled">Контакты</a></li>
+                </ul>
+            </div>
+        </section>
         <section class="about about_padding">
             <div class="uk-container">
                 <div class="uk-section">
@@ -194,14 +202,14 @@
                         <div class="form__inputs form__spread">
                             <div class="uk-flex uk-flex-between form__row">
                                 <div class="uk-input form__div">
-                                    <input class="uk-input" type="text" placeholder="Ваше имя">
+                                    <input class="uk-input" type="text" name="name" placeholder="Ваше имя">
                                     <span class="form__err">В формате А-Я,а-я и минимум 2 символа</span>
                                 </div>
                                 <div class="uk-input form__div">
-                                    <input class="uk-input" type="tel" placeholder="Ваш телефон">
+                                    <input class="uk-input" type="tel" name="tel" placeholder="Ваш телефон">
                                     <span class="form__err">Введите номер в международном формате</span>
                                 </div>
-                                <input class="uk-input form__spread" type="text" placeholder="Ваш комментарий">
+                                <input class="uk-input form__spread" name="comment" type="text" placeholder="Ваш комментарий">
                                 <button class="uk-input" type="submit">Оставить отзыв</button>
                             </div>
                         </div>
@@ -306,24 +314,30 @@
                 <p class="uk-text uk-text-small">Наш администратор свяжется с Вами для корректировки времени.</p>
                 <div class="uk-flex uk-flex-between uk-child-width-1-3 popup__row">
                     <div class="uk-input form__div">
-                        <input class="uk-input" type="text" placeholder="Ваше имя">
+                        <input class="uk-input" type="text" name="name" placeholder="Ваше имя">
                         <span class="form__err">В формате А-Я,а-я и минимум 2 символа</span>
                     </div>
                     <div class="uk-input form__div">
-                        <input class="uk-input" type="tel" placeholder="Ваш телефон">
+                        <input class="uk-input" type="tel" name="tel" placeholder="Ваш телефон">
                         <span class="form__err">Введите номер в международном формате</span>
                     </div>
                     <div class="uk-input form__div">
-                        <input class="uk-input" type="email" placeholder="Ваш e-mail">
+                        <input class="uk-input" type="email" name="mail" placeholder="Ваш e-mail">
+                        <div class="popup__info">
+                            <img src="./img/popup-info.svg" alt="" class="popup__info-img">
+                            <div class="popup__info-card">
+                                <p>Email служит для оповещения об ответе, он не будет опубликован на сайте.</p>
+                                <p>Не является обязательным полем для заполнения</p>
+                            </div>
+                        </div>
                         <span class="form__err">Неверный формат E-mail адреса</span>
                     </div>
                 </div>
                 <div class="popup__row">
-                    <textarea class="uk-input" rows="2" placeholder="Что вас беспокоит?"></textarea>
+                    <textarea class="uk-input" rows="2" name="comment" placeholder="Что вас беспокоит?"></textarea>
                 </div>
                 <div class="uk-flex uk-flex-between uk-width-1-1 popup__row">
-
-                    <button class="uk-button popup__submit popup-sucsess-open">Записаться на прием <img src="./img/inline-arrow-w.svg"></button>
+                    <button type="submit" class="uk-button popup__submit">Записаться на прием <img src="./img/inline-arrow-w.svg"></button>
                 </div>
             </div>
         </div>
@@ -334,6 +348,15 @@
             <div class="popup__body">
                 <h2 class="uk-h1 uk-text-center">Ваша заявка принята!</h2>
                 <p class="uk-text uk-text-center uk-text-small">Наш администратор свяжется с Вами для корректировки времени.</p>
+            </div>
+        </div>
+    </div>
+    <div class="popup__wrapper popup-error">
+        <div class="uk-position-relative popup popup_sucsess">
+            <span class="uk-position-absolute popup__close popup-close"></span>
+            <div class="popup__body">
+                <h2 class="uk-h1 uk-text-center">Произошла ошибка!</h2>
+                <p class="uk-text uk-text-center uk-text-small">По техническим причинам ваша заявка не была принята, попробуйте немного позже.</p>
             </div>
         </div>
     </div>
