--- a/dentko/reviews/reviews.html
+++ b/dentko/reviews/reviews.html
@@ -95,9 +95,9 @@
                 </li>
                 <li><a href="/dentko/price.html">цены</a></li>
                 <li><a href="/dentko/payment.html">оплата и рассрочка</a></li>
-                <li><a href="/dentko/reviews.html">отзывы</a></li>
+                <li><a href="/dentko/reviews/reviews.html">отзывы</a></li>
                 <li><a href="/dentko/team.html">специалисты</a></li>
-                <li><a href="/dentko/faq.html">вопрос-ответ</a></li>
+                <li><a href="/dentko/faq/faq.html">вопрос-ответ</a></li>
                 <li><a href="/dentko/contacts.html">контакты</a></li>
                 <li><a class="nav__order popup-request-open" href="#">Записаться на прием <img src="/dentko/img/inline-arrow.svg"></a></li>
             </ul>
@@ -210,7 +210,7 @@
                 </div>
             </div>
         </section>
-        <section class="form">
+        <section id="form" class="form">
             <div class="uk-container">
                 <div class="form__body">
                     <h2 class="uk-h2">Оставить отзыв</h2>
@@ -229,16 +229,16 @@
                                     </div>
                                 </div>
                                 <div class="uk-input form__div">
-                                    <input class="uk-input" type="text" placeholder="Ваше имя">
+                                    <input class="uk-input" type="text" name="name" placeholder="Ваше имя">
                                     <span class="form__err">В формате А-Я,а-я и минимум 2 символа</span>
                                 </div>
                                 <div class="uk-input form__div">
-                                    <input class="uk-input" type="email" placeholder="Ваш e-mail">
+                                    <input class="uk-input" type="email" name="mail" placeholder="Ваш e-mail">
                                     <span class="form__err">Неверный формат E-mail адреса</span>
                                 </div>
                             </div>
                             <div class="form__row">
-                                <textarea class="form__textarea" placeholder="Напишите ваш отзыв" rows="1"></textarea>
+                                <textarea class="form__textarea" placeholder="Напишите ваш отзыв" name="comment" rows="1"></textarea>
                             </div>
                         </div>
                         <div class="form__submit">
@@ -346,24 +346,30 @@
                 <p class="uk-text uk-text-small">Наш администратор свяжется с Вами для корректировки времени.</p>
                 <div class="uk-flex uk-flex-between uk-child-width-1-3 popup__row">
                     <div class="uk-input form__div">
-                        <input class="uk-input" type="text" placeholder="Ваше имя">
+                        <input class="uk-input" type="text" name="name" placeholder="Ваше имя">
                         <span class="form__err">В формате А-Я,а-я и минимум 2 символа</span>
                     </div>
                     <div class="uk-input form__div">
-                        <input class="uk-input" type="tel" placeholder="Ваш телефон">
+                        <input class="uk-input" type="tel" name="tel" placeholder="Ваш телефон">
                         <span class="form__err">Введите номер в международном формате</span>
                     </div>
                     <div class="uk-input form__div">
-                        <input class="uk-input" type="email" placeholder="Ваш e-mail">
+                        <input class="uk-input" type="email" name="mail" placeholder="Ваш e-mail">
+                        <div class="popup__info">
+                            <img src="/dentko/img/popup-info.svg" alt="" class="popup__info-img">
+                            <div class="popup__info-card">
+                                <p>Email служит для оповещения об ответе, он не будет опубликован на сайте.</p>
+                                <p>Не является обязательным полем для заполнения</p>
+                            </div>
+                        </div>
                         <span class="form__err">Неверный формат E-mail адреса</span>
                     </div>
                 </div>
                 <div class="popup__row">
-                    <textarea class="uk-input" rows="2" placeholder="Что вас беспокоит?"></textarea>
+                    <textarea class="uk-input" rows="2" name="comment" placeholder="Что вас беспокоит?"></textarea>
                 </div>
                 <div class="uk-flex uk-flex-between uk-width-1-1 popup__row">
-
-                    <button class="uk-button popup__submit popup-sucsess-open">Записаться на прием <img src="/dentko/img/inline-arrow-w.svg"></button>
+                    <button type="submit" class="uk-button popup__submit">Записаться на прием <img src="/dentko/img/inline-arrow-w.svg"></button>
                 </div>
             </div>
         </div>
@@ -374,6 +380,15 @@
             <div class="popup__body">
                 <h2 class="uk-h1 uk-text-center">Ваша заявка принята!</h2>
                 <p class="uk-text uk-text-center uk-text-small">Наш администратор свяжется с Вами для корректировки времени.</p>
+            </div>
+        </div>
+    </div>
+    <div class="popup__wrapper popup-error">
+        <div class="uk-position-relative popup popup_sucsess">
+            <span class="uk-position-absolute popup__close popup-close"></span>
+            <div class="popup__body">
+                <h2 class="uk-h1 uk-text-center">Произошла ошибка!</h2>
+                <p class="uk-text uk-text-center uk-text-small">По техническим причинам ваша заявка не была принята, попробуйте немного позже.</p>
             </div>
         </div>
     </div>
