--- a/dentko/index.html
+++ b/dentko/index.html
@@ -48,8 +48,8 @@
                 <dl class="uk-description-list header__item">
                     <dt>Мы в соц.сетях:</dt>
                     <dd class="uk-flex uk-flex-between">
-                        <a href="#" class="header__link"><img src="./img/facebook.png" alt="Иконка" class="header__link-img"></a>
-                        <a href="#" class="header__link"><img src="./img/vk.png" alt="Иконка" class="header__link-img"></a>
+                        <a href="https://www.facebook.com/dentko.stom" class="header__link"><img src="./img/facebook.png" alt="Иконка" class="header__link-img"></a>
+                        <a href="https://vk.com/dentko_stomatology" class="header__link"><img src="./img/vk.png" alt="Иконка" class="header__link-img"></a>
                         <a href="#" class="header__link"><img src="./img/instagram.png" alt="Иконка" class="header__link-img"></a>
                     </dd>
                 </dl>
@@ -66,9 +66,9 @@
                             </div>
                         </div>
                         <div class="uk-flex-inline uk-flex-between">
-                            <a href="#" class="header__link"><img src="./img/telegram.png" alt="Иконка" class="header__link-img"></a>
-                            <a href="#" class="header__link"><img src="./img/viber.png" alt="Иконка" class="header__link-img"></a>
-                            <a href="#" class="header__link"><img src="./img/whatsapp.png" alt="Иконка" class="header__link-img"></a>
+                            <a href="tg://msg?text=&to=+375291101212" class="header__link"><img src="./img/telegram.png" alt="Иконка" class="header__link-img"></a>
+                            <a href="viber://chat?number=375291101212" class="header__link"><img src="./img/viber.png" alt="Иконка" class="header__link-img"></a>
+                            <a href="whatsapp://send?phone=375291101212" class="header__link"><img src="./img/whatsapp.png" alt="Иконка" class="header__link-img"></a>
                         </div>
                     </dd>
                 </dl>
@@ -92,6 +92,7 @@
                             <li><a href="./service.html"><img src="./img/inline-arrow-w.svg">Профилактика</a></li>
                             <li><a href="./service.html"><img src="./img/inline-arrow-w.svg">Парадонтология</a></li>
                             <li><a href="./service.html"><img src="./img/inline-arrow-w.svg">Косметология</a></li>
+                            <li><a href="./service.html"><img src="./img/inline-arrow-w.svg">Диагностика</a></li>
                         </ul>
                     </div>
                 </li>
@@ -575,7 +576,6 @@
             <div class="uk-container">
                 <div class="uk-flex uk-flex-between uk-flex-middle portfolio__title">
                     <h2 class="uk-h2">Улыбки наших пациентов</h2>
-                    <a href="#" class="uk-link green-link">Портфолио работ</a>
                 </div>
                 <div class="uk-flex uk-flex-between uk-child-width-1-3@s uk-child-width-1-4@m portfolio__wrap">
                     <div class="uk-card uk-card-default">
