--- a/dentko/service.html
+++ b/dentko/service.html
@@ -746,7 +746,7 @@
             <div class="popup__body">
                 <h2 class="uk-h1">Задать вопрос врачу</h2>
                 <p class="uk-text uk-text-small">Наш администратор свяжется с Вами для корректировки времени.</p>
-                <div class="uk-flex uk-flex-between uk-child-width-1-3 popup__row">
+                <div class="uk-flex uk-flex-between uk-child-width-1-2 popup__row">
                     <div class="uk-input form__div">
                         <input class="uk-input" type="text" name="name" placeholder="Ваше имя">
                         <span class="form__err">В формате А-Я,а-я и минимум 2 символа</span>
@@ -760,7 +760,7 @@
                     <textarea class="uk-input" rows="2" name="comment" placeholder="Что вас беспокоит?"></textarea>
                 </div>
                 <div class="uk-flex uk-flex-between uk-width-1-1 popup__row">
-                    <button type="submit" class="uk-button popup__submit">Записаться на прием <img src="./img/inline-arrow-w.svg"></button>
+                    <button type="submit" class="uk-button popup__submit">Задать вопрос<img src="./img/inline-arrow-w.svg"></button>
                 </div>
             </div>
         </div>
