--- a/dom/index.html
+++ b/dom/index.html
@@ -64,25 +64,22 @@
             <div class="swiper-container banner__slider">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <img src="./img/banner-bg.jpg" alt="">
+                        <img src="./img/banner1.jpg" alt="">
                     </div>
                     <div class="swiper-slide">
-                        <img src="./img/banner-bg.jpg" alt="">
+                        <img src="./img/banner2.jpg" alt="">
                     </div>
                     <div class="swiper-slide">
-                        <img src="./img/banner-bg.jpg" alt="">
+                        <img src="./img/banner3.jpg" alt="">
                     </div>
                     <div class="swiper-slide">
-                        <img src="./img/banner-bg.jpg" alt="">
+                        <img src="./img/banner4.jpg" alt="">
                     </div>
                     <div class="swiper-slide">
-                        <img src="./img/banner-bg.jpg" alt="">
+                        <img src="./img/banner5.jpg" alt="">
                     </div>
                     <div class="swiper-slide">
-                        <img src="./img/banner-bg.jpg" alt="">
-                    </div>
-                    <div class="swiper-slide">
-                        <img src="./img/banner-bg.jpg" alt="">
+                        <img src="./img/banner6.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -155,12 +152,6 @@
                                     <img src="./img/swiper5.jpg" alt="" class="subslider__img">
                                     <h3 class="subslider__title">Для коттеджей и жилых комплексов </h3>
                                     <span class="subslider__span">многквартирные дома</span>
-                                </div>
-                            </div>
-                            <div class="swiper-slide">
-                                <div class="subslider__item">
-                                    <img src="./img/swiper6.jpg" alt="" class="subslider__img">
-                                    <h3 class="subslider__title">Для ресторанов, кафе и столовых</h3>
                                 </div>
                             </div>
                             <div class="swiper-slide">
